kubernetes/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: julpoz/wordle-frontend
          name: wordle-frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
